feat: implement dashboard and fix patient checkup page
